<resources>
    <string name="app_name">hackaton-project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farmacias">Farmacias</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="placeholder_farmacia_title">Nombre Farmacia</string>
    <string name="placeholder_farmacia_direction">Direccion Farmacia</string>
    <string name="placeholder_farmacia_tlfn">Telefono farmacia</string>
    <string name="farmacia_address_title">Dirección</string>
    <string name="farmacia_schedule_title">Horario</string>
    <string name="farmacia_telefono_title">Telefono</string>
</resources>
